--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: GT-COAR
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Georgia Tech Control, Optimization, Algorithms and Randomness
+  Georgia Tech - Control, Optimization, Algorithms and Randomness
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gt-coar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
